--- a/package.json
+++ b/package.json
@@ -13,8 +13,10 @@
     "@react-navigation/native": "^6.1.8",
     "@react-navigation/native-stack": "^6.9.14",
     "babel-plugin-module-resolver": "^5.0.0",
+    "moment": "^2.29.4",
     "react": "18.2.0",
     "react-native": "0.72.5",
+    "react-native-mask-input": "^1.2.3",
     "react-native-safe-area-context": "^4.7.2",
     "react-native-screens": "^3.25.0",
     "react-native-svg": "^13.14.0"
