--- a/tsconfig.json
+++ b/tsconfig.json
@@ -7,7 +7,7 @@
       "@components": ["src/components/index"],
       "@hooks": ["src/hooks/index"],
       "@theme": ["src/utils/theme/index"],
-      "@constants": ["src/utils/constants/index"]
+      "@constants": ["src/utils/constants/index"],
     }
   }
 }
